--- a/web/index.html
+++ b/web/index.html
@@ -7,8 +7,11 @@
     <title>AIS Marker</title>
   </head>
   <script type="text/javascript" src="/eel.js"></script>
+  <link rel="shortcut icon" href="ais.ico" type="image/x-icon">
   <link rel="stylesheet" href="external_assets/css/bootstrap4_3_1.min.css">
   <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="external_assets/css/auto-complete.css">
+  <script type="text/javascript" src="external_assets/css/all.css"></script>
   <script type="text/javascript" src="external_assets/js/jquery-3.4.1.min.js"></script>
   <script type="text/javascript" src="external_assets/js/bootstrap.min.js"></script>
   <script src="js/index.js"></script>
@@ -23,5 +26,4 @@
       <button id="btnFinish" class="btn">Finish</button>
   </div>
 
-</body>
 </html>
