--- a/web/quick-guide.html
+++ b/web/quick-guide.html
@@ -1,14 +1,51 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>Quick Guide</title>
-  </head>
-  <script type="text/javascript" src="/eel.js"></script>
-  <link rel="stylesheet" href="/external_assets/css/bootstrap4_3_1.min.css">
-  <script type="text/javascript" src="/external_assets/js/jquery-3.4.1.min.js"></script>
-  <script type="text/javascript" src="/external_assets/js/bootstrap.min.js"></script>
-<body>
+<html class="h-100">
 
+<head>
+    <title>AIS Marker</title>
+    <link rel="stylesheet" href="/web/css/index.css">
+    <link rel="stylesheet" href="/web/css/main.css">
+    <link rel="stylesheet" href="/web/css/lib/bootstrap4_3_1.min.css">
+    <link rel="stylesheet" href="/web/css/all.css">
+    <script src="/web/js/lib/jquery-3.4.1.min.js"></script>
+    <script src="/web/js/lib/popper.min.js"></script>
+        <script src="/web/js/lib/bootstrap.min.js"> </script> <script type="text/javascript" src="/eel.js"></script>
+</head>
+<body style="background: #fc354c;">
+    <div>
+        <img class="small-logo" src="/web/img/ais-logo-vector.png" />
+        <span class="app-title">AIS Marker</span>
+        <div style="float: right;">
+             <span class="small-circle-bg menu-item small-icon">
+                <a class='menu-icon fa fa-question-circle' href='splash.html' title="How to Use"></a>
+            </span>
+            <span class="small-circle-bg menu-item small-icon">
+                <a class='fa fa-info' href='https://sites.google.com/view/evaluate-app' title="About" target='_blank' ></a>
+            </span>
+        </div>
+        
+    </div>
 
+    <div class="container start">
+        <a href=""><img alt="" src="/web/img/quick start.png"></a> 
+    </div>
+    <div class="container navigation">
+        <div class="footer">
+                <hr>
+                <nav>
+                    <ul>
+                        <li><a href="#">COURSES</a></li>
+                        <span class="line"></span>
+                        <li><a href="#">PRESENTATIONS</a></li>
+                        <span class="line"></span>
+                        <li><a href="#">STUDENTS</a></li>
+                        <span class="line"></span>
+                        <li><a href="#">DOCUMENTS</a></li>
+                    </ul>
+                </nav>
+        </div>
+    </div>
 </body>
+<script src="/web/js/mainpage.js"></script>
+<script src="/web/js/global.js"></script>
 </html>
