--- a/web/quick-guide.html
+++ b/web/quick-guide.html
@@ -1,22 +1,22 @@
 <!DOCTYPE html>
 <html class="h-100">
 
-<head>
-    <title>AIS Marker</title>
-    <link rel="stylesheet" href="/web/css/index.css">
-    <link rel="stylesheet" href="/web/css/main.css">
-    <link rel="stylesheet" href="/web/css/lib/bootstrap4_3_1.min.css">
-    <link rel="stylesheet" href="/web/css/all.css">
-    <script src="/web/js/lib/jquery-3.4.1.min.js"></script>
-    <script src="/web/js/lib/popper.min.js"></script>
-        <script src="/web/js/lib/bootstrap.min.js"> </script> <script type="text/javascript" src="/eel.js"></script>
+  <head>
+    <title>AIS Electronic Assessment Software</title>
+    <link rel="stylesheet" href="asset/index.css">
+    <link rel="stylesheet" href="asset/css/main.css">
+    <link rel="stylesheet" href="asset/css/lib/bootstrap4_3_1.min.css">
+    <link rel="stylesheet" href="asset/css/all.css">
+    <script src="asset/js/lib/jquery-3.4.1.min.js"></script>
+    <script src="asset/js/lib/popper.min.js"></script>
+        <script src=" asset/js/lib/bootstrap.min.js"> </script> <script type="text/javascript" src="/eel.js"></script>
 </head>
 <body style="background: #fc354c;">
-    <div>
-        <img class="small-logo" src="/web/img/ais-logo-vector.png" />
+      <div>
+        <img class="small-logo" src="/web/asset/imgs/ais-logo-vector.png" />
         <span class="app-title">AIS Marker</span>
         <div style="float: right;">
-             <span class="small-circle-bg menu-item small-icon">
+            <span class="small-circle-bg menu-item small-icon">
                 <a class='menu-icon fa fa-question-circle' href='splash.html' title="How to Use"></a>
             </span>
             <span class="small-circle-bg menu-item small-icon">
@@ -27,7 +27,7 @@
     </div>
 
     <div class="container start">
-        <a href=""><img alt="" src="/web/img/quick start.png"></a> 
+        <a href=""><img alt="" src="/web/asset/imgs/quick start.png"></a> 
     </div>
     <div class="container navigation">
         <div class="footer">
