Clean up print codes; Add sleep (as per Ben's suggestion) in global

--- a/web/assessment.html
+++ b/web/assessment.html
@@ -135,7 +135,7 @@
     </div>
 
     <!-- End of Successful Save Popup -->
-
+    <script type="text/javascript" src="js/global.js"></script>
     <script type="text/javascript" src="js/assessment.js"></script>
   </body>
 </html>
