--- a/web/index.html
+++ b/web/index.html
@@ -25,5 +25,6 @@
       <button id="btnSkip" class="btn">Skip</button>
       <button id="btnFinish" class="btn">Finish</button>
   </div>
-
+</body>
+<script type="text/javascript" src="js/assessment.js"></script>
 </html>
