--- a/web/index.html
+++ b/web/index.html
@@ -3,28 +3,79 @@
 -->
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>AIS Marker</title>
-  </head>
-  <script type="text/javascript" src="/eel.js"></script>
-  <link rel="shortcut icon" href="ais.ico" type="image/x-icon">
-  <link rel="stylesheet" href="external_assets/css/bootstrap4_3_1.min.css">
-  <link rel="stylesheet" href="css/main.css">
-  <link rel="stylesheet" href="external_assets/css/auto-complete.css">
-  <script type="text/javascript" src="external_assets/css/all.css"></script>
-  <script type="text/javascript" src="external_assets/js/jquery-3.4.1.min.js"></script>
-  <script type="text/javascript" src="external_assets/js/bootstrap.min.js"></script>
-  <script src="js/index.js"></script>
-<body>
+
+<head>
+  <title>AIS Marker</title>
+</head>
+<script type="text/javascript" src="/eel.js"></script>
+<link rel="shortcut icon" href="ais.ico" type="image/x-icon">
+<link rel="stylesheet" href="external_assets/css/bootstrap4_3_1.min.css">
+<link rel="stylesheet" href="external_assets/css/fontawesome.min.css">
+<link rel="stylesheet" href="external_assets/css/all.min.css">
+<script type="text/javascript" src="external_assets/css/all.css"></script>
+<script type="text/javascript" src="external_assets/js/jquery-3.4.1.min.js"></script>
+<script type="text/javascript" src="external_assets/js/bootstrap.min.js"></script>
+<link rel="stylesheet" href="css/global.css">
+<link rel="stylesheet" href="css/main.css">
+<script src="js/index.js"></script>
+
+<body style="background: #fc354c">
+
   <!-- This is the Main Menu section -->
-<h1>This is the Main Menu</h1>
-<button id="btnQuickStart" class="btn">Quick Start</button>
-<!-- This is the Onboarding section -->
-  <div class="onboarding-wrapper">
-      <h1>This is onboarding</h1>
-      <button id="btnSkip" class="btn">Skip</button>
-      <button id="btnFinish" class="btn">Finish</button>
+
+  <!-- Header -->
+  <div class="three-col-spaced">
+    <div>
+      <img class="small-logo" src="imgs/ais-logo-vector.png" />
+      <span class="app-title">AIS Marker</span>
+    </div>
+    <div></div>
+    <div>
+      <span class="small-circle-bg menu-item small-icon">
+        <a class='fa fa-question-circle' href='quick-guide.html' title="How to Use"></a>
+      </span>
+      <span class="small-circle-bg menu-item small-icon">
+        <a class='fa fa-info' href='https://sites.google.com/view/evaluate-app' title="About" target='_blank'></a>
+      </span>
+    </div>
+
   </div>
+
+  <div style="height: 5em;"></div>
+
+  <!-- Main Menu buttons -->
+
+  <div class="container text-center">
+    <div>
+      <button id="btnQuickStart" class="btn"><img src='imgs/quick start.png' /></button>
+    </div>
+    <div class="footer">
+      <hr>
+      <nav>
+        <ul>
+          <li><a href="#">COURSES</a></li>
+          <span class="line"></span>
+          <li><a href="#">PRESENTATIONS</a></li>
+          <span class="line"></span>
+          <li><a href="#">STUDENTS</a></li>
+          <span class="line"></span>
+          <li><a href="#">DOCUMENTS</a></li>
+        </ul>
+      </nav>
+    </div>
+  </div>
+
+
+  <!-- This is the Onboarding section -->
+  <!-- This only appears once when it's the user's first time -->
+  <div class="onboarding-wrapper">
+    <h1>This is onboarding</h1>
+    <button id="btnSkip" class="btn">Skip</button>
+    <button id="btnFinish" class="btn">Finish</button>
+  </div>
+
+  <script type="text/javascript" src="js/assessment.js"></script>
+
 </body>
-<script type="text/javascript" src="js/assessment.js"></script>
+
 </html>
