Add managing of courses, presentations, students Code Cleanup Minor changes in database schema

--- a/web/index.html
+++ b/web/index.html
@@ -53,13 +53,13 @@
       <hr>
       <nav>
         <ul>
-          <li><a href="#">COURSES</a></li>
+          <li><a href="setup/courses.html">COURSES</a></li>
           <span class="line"></span>
-          <li><a href="#">PRESENTATIONS</a></li>
+          <li><a href="setup/presentations.html">PRESENTATIONS</a></li>
           <span class="line"></span>
-          <li><a href="#">STUDENTS</a></li>
+          <li><a href="setup/students.html">STUDENTS</a></li>
           <span class="line"></span>
-          <li><a href="#">DOCUMENTS</a></li>
+          <li><a href="setup/config.html">CONFIGURATIONS</a></li>
         </ul>
       </nav>
     </div>
@@ -74,7 +74,7 @@
     <button id="btnFinish" class="btn">Finish</button>
   </div>
 
-  <script type="text/javascript" src="js/assessment.js"></script>
+  <script type="text/javascript" src="js/global.js"></script>
 
 </body>
 
