Add(n/a) added functionality to manage assessment table rows and cells

--- a/web/assessment.html
+++ b/web/assessment.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="css/assessment.css">
     <script type="text/javascript" src="/external_assets/js/jquery-3.4.1.min.js"></script>
     <script type="text/javascript" src="/external_assets/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="/external_assets/js/jquery.tabledit.js"></script>
   </head>
 
   <body style="background-color: rgb(209, 201, 201);">
@@ -133,9 +134,11 @@
             </div>
         </div>
     </div>
+    <table class="tabledit"></table>
 
     <!-- End of Successful Save Popup -->
 
     <script type="text/javascript" src="js/assessment.js"></script>
+    <script type="text/javascript" src="js/table-edit.js"></script>
   </body>
 </html>
