--- a/web/index.html
+++ b/web/index.html
@@ -14,6 +14,7 @@
   <script type="text/javascript" src="external_assets/css/all.css"></script>
   <script type="text/javascript" src="external_assets/js/jquery-3.4.1.min.js"></script>
   <script type="text/javascript" src="external_assets/js/bootstrap.min.js"></script>
+  <script type="text/javascript" src="external_assets/js/jquery.tabledit.js"></script>
   <script src="js/index.js"></script>
 <body>
   <!-- This is the Main Menu section -->
