Shows template name on header; When template is created, user can use it immediately

--- a/web/edit-assessment.html
+++ b/web/edit-assessment.html
@@ -47,8 +47,8 @@
             <a href="assessment.html" class="header-icon btnNavigate"><i class="fas fa-arrow-alt-circle-left"></i></a>
         </div>
 
-        <div>
-            <h2 class=".header-template-name">Editing Mode</h2>
+        <div class="header-edit-mode">
+            <span>Editing </span><span class="header-template-name"></span>
         </div>
 
         <div class="header-icon-container">
