Style changes in editing score system

--- a/web/edit-assessment.html
+++ b/web/edit-assessment.html
@@ -82,42 +82,42 @@
                     <div id="divCalculated" class="div-dropdown">
                         <table>
                             <tr>
-                                <td>Lowest Score:</td> <!-- Score of Poor -->
+                                <td><strong>Lowest Score</strong>:</td> <!-- Score of Poor -->
                                 <td><input id="txtLowestScore" type="number" min="0" max="100" value="0"
                                         style="width: 50px" /></td>
                             </tr>
                             <tr>
-                                <td>Multiplier:</td>
+                                <td><strong>Multiplier</strong>:</td>
                                 <td><input id="txtMultiplier" type="number" min="1" max="50" value="1"
                                         style="width: 50px" /></td>
                             </tr>
                         </table>
                     </div>
-                    <div><input type="radio" class="radio-dropdown" id="rdoCustom" name="rdoGroupScoreSystem" /><label
-                            for="rdoCustom">Custom</label></div>
+                    <div><input type="radio" class="radio-dropdown" id="rdoCustom" name="rdoGroupScoreSystem" />
+                        <label for="rdoCustom">Custom</label></div>
                     <div id="divCustom" class="div-dropdown">
                         <p><em>Note: Your points should follow correct order (highest to lowest)</em></p>
                         <table>
                             <tr>
-                                <td>Excellent: </td>
+                                <td><strong>Excellent:</strong></td>
                                 <td><input id="txtExcellentScore" type="number" min="1" max="100" value="4"
                                         style="width: 50px" /></td>
                                 <td><span class="score-error excellentScore">Should be higher than Good</span></td>
                             </tr>
                             <tr>
-                                <td>Good:</td>
+                                <td><strong>Good:</strong></td>
                                 <td><input id="txtGoodScore" type="number" min="1" max="100" value="3"
                                         style="width: 50px" /></td>
                                 <td><span class="score-error goodScore">Should be higher than Fair</span></td>
                             </tr>
                             <tr>
-                                <td>Fair:</td>
+                                <td><strong>Fair:</strong></td>
                                 <td><input id="txtFairScore" type="number" min="1" max="100" value="2"
                                         style="width: 50px" /></td>
                                 <td><span class="score-error fairScore">Should be higher than Poor</span></td>
                             </tr>
                             <tr>
-                                <td>Poor:</td>
+                                <td><strong>Poor:</strong></td>
                                 <td><input id="txtPoorScore" type="number" min="0" max="100" value="1"
                                         style="width: 50px" /></td>
                                 <td><span class="score-error poorScore"></span></td>
