Modified link to open document folder

--- a/web/assessment.html
+++ b/web/assessment.html
@@ -161,7 +161,7 @@
                         </div>
                         <div class="col-sm-8">
                             <p class="successSavePopupBody">Your evaluation was successfully saved.</p>
-                            <i id="linkOpenDocument" class="black-link">Open document</i>
+                            <u id="linkOpenDocument" class="black-link">Open document folder</u>
                         </div>
                     </div>
                 </div>
