Minor message and styling tweaks

--- a/web/index.html
+++ b/web/index.html
@@ -127,27 +127,32 @@
   <div class="onboarding-wrapper">
     <div class="tutorial-body">
       <div class="menu d-flex">
-        <div id="intro-carousel" class="carousel" data-wrap="false">
+        <div id="intro-carousel" class="carousel" data-wrap="false" data-interval="false">
           <div class="carousel-inner">
             <div class="carousel-item active text-center">
-              <div class="d-block">
-                <img src="imgs/teacher-in-red.png" />
-              </div>
-              <h3>Easy Evaluation</h3>
-              <p>Focus on students' presentations and give them the valuable feedback</p>
+              
+              <h1 class="text-danger">AIS Marker</h1>
+              <h4 class="text-danger">A Presentation Marking Tool</h4>
             </div>
+            <div class="carousel-item text-center">
+                <div class="d-block">
+                  <img src="imgs/teacher-in-red.png" />
+                </div>
+                <h3 class="text-danger">Easy Evaluation</h3>
+                <p>Focus on students' presentations and give them valuable feedback</p>
+              </div>
             <div class="carousel-item text-center">
               <div class="d-block">
                 <img src="imgs/teacher-folder.png" />
               </div>
-              <h3>Paperless Marking</h3>
+              <h3 class="text-danger">Paperless Marking</h3>
               <p>No more printing forms and scanning them back to your computer</p>
             </div>
             <div class="carousel-item text-center">
               <div class="d-block">
                 <img src="imgs/teacher-laptop.png" />
               </div>
-              <h3>Everything in Place</h3>
+              <h3 class="text-danger">Everything in Place</h3>
               <p>All you need is to bring your device and you can make assessments</p>
             </div>
             <div class="carousel-item text-center">
