Fix to Bug 14 Added dismiss modal to Cancel button

--- a/web/edit-assessment.html
+++ b/web/edit-assessment.html
@@ -140,7 +140,7 @@
                     </div>
                 </div>
                 <div class="modal-footer">
-                    <button id="btnCancelEdit" class="btn btn-secondary">Cancel</button>
+                    <button id="btnCancelEdit" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
                     <button id="btnApply" class="btn btn-success">Apply</button>
                 </div>
             </div>
