Add reset button in assessment page Removed saving lowest score and multiplier

--- a/web/assessment.html
+++ b/web/assessment.html
@@ -60,7 +60,11 @@
         <div class="assessment-container">
             <!-- Dynamically populated in the back-end -->
         </div>
-        <button class="btnSaveDocument btn btn-primary">Finish Evaluation</button>
+        <div style="text-align: right; width: 100%;">
+            <a href="#" class="btn btn-secondary" onclick="window.location.reload();">Reset</a>
+            <button class="btnSaveDocument btn btn-primary">Finish Evaluation</button>
+        </div>
+        
     </div>
 
     <!-- MODALS (POPUPS) -->
