--- a/web/setup/courses.html
+++ b/web/setup/courses.html
@@ -27,11 +27,11 @@
         <div class="row">
             <div class="col-4">
                 <label for="txtCourseCode">Course Code</label>
-                <input type="text" class="form-control" id="txtCourseCode"placeholder="Enter Course Code">
+                <input type="text" class="form-control" id="txtCourseCode"placeholder="Enter Course Code" maxlength="10">
             </div>
             <div class="col-8">
                 <label for="txtCourseName">Course Name</label>
-                <input type="text" class="form-control" id="txtCourseName" placeholder="Course Name">
+                <input type="text" class="form-control" id="txtCourseName" placeholder="Course Name" maxlength="40">
             </div>
         </div>
         <br />
