--- a/web/assessment.html
+++ b/web/assessment.html
@@ -41,17 +41,18 @@
             <table class="full-width-table">
                 <tr>
                     <td>Student Name:
-                        <input type="text" class="header-input border-bottom-only tableStudentName" />
+                        <input type="text" class="header-input border-bottom-only tableStudentName" maxlength=40 />
                     </td>
                     <td>Student ID:
-                        <input type="text" class="header-input border-bottom-only tableStudentID" />
+                        <input type="text" class="header-input border-bottom-only tableStudentID" maxlength=10 />
                     </td>
                 </tr>
             </table>
+            <br />
             <table class="full-width-table">
                 <tr>
                     <td>Topic of Presentation:
-                        <input type="text" class="header-input border-bottom-only tablePresentation"></span>
+                        <input type="text" class="header-input border-bottom-only tablePresentation" maxlength=40></span>
                     </td>
                 </tr>
             </table>
