--- a/web/assessment.html
+++ b/web/assessment.html
@@ -40,10 +40,12 @@
             <input type="hidden" class="tableCourseCode" />
             <table class="full-width-table">
                 <tr>
-                    <td>Student Name:
+                    <td>
+                        Student Name:
                         <input type="text" class="header-input border-bottom-only tableStudentName" maxlength=40 />
                     </td>
-                    <td>Student ID:
+                    <td>
+                        Student ID:
                         <input type="text" class="header-input border-bottom-only tableStudentID" maxlength=10 />
                     </td>
                 </tr>
@@ -51,7 +53,8 @@
             <br />
             <table class="full-width-table">
                 <tr>
-                    <td>Topic of Presentation:
+                    <td>
+                        Topic of Presentation:
                         <input type="text" class="header-input border-bottom-only tablePresentation" maxlength=40></span>
                     </td>
                 </tr>
@@ -65,11 +68,10 @@
             <a href="#" class="btn btn-secondary" onclick="window.location.reload();">Reset</a>
             <button class="btnSaveDocument btn btn-primary">Finish Evaluation</button>
         </div>
-        
+
     </div>
 
     <!-- MODALS (POPUPS) -->
-
     <!-- Choose Template Popup -->
 
     <div class="modal fade" id="popupChooseTemplate" tabindex="-1" role="dialog">
@@ -84,8 +86,10 @@
                             <select id="ddlTemplates" class="form-control"></select>
                         </div>
                         <div class="col-sm-12">
-                            <p><span class="small">Description:</span><br />
-                                <span class="small text-secondary" id="lblTemplateDescription">This is the description.</span></p>
+                            <p>
+                                <span class="small">Description:</span><br />
+                                <span class="small text-secondary" id="lblTemplateDescription">This is the description.</span>
+                            </p>
                         </div>
                     </div>
                 </div>
@@ -97,11 +101,10 @@
     </div>
 
     <!-- End of Successful Save Popup -->
-
     <!-- Evaluate Info Popup -->
 
     <div class="modal fade" id="popupAddStudent" tabindex="-1" role="dialog" aria-labelledby="popupAddStudentTitle"
-        aria-hidden="true">
+         aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered" role="document">
             <div class="modal-content">
                 <div class="modal-header">
@@ -141,19 +144,19 @@
                     </div>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-block btn-primary" id="btnEvaluate"><i
-                            class="fa fa-check"></i></button>
+                    <button type="button" class="btn btn-block btn-primary" id="btnEvaluate">
+                        <i class="fa fa-check"></i>
+                    </button>
                 </div>
             </div>
         </div>
     </div>
 
     <!-- End of Evaluate Info Popup -->
-
     <!-- Successful Save Popup -->
 
     <div class="modal fade" id="popupSuccessfulSave" tabindex="-1" role="dialog" aria-labelledby="successfulSavePopup"
-        aria-hidden="true">
+         aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
@@ -179,11 +182,30 @@
     </div>
 
     <!-- End of Successful Save Popup -->
+    <div class="modal fade" id="popupMessage" tabindex="-1" role="dialog">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="modalTitle">Message</h5>
 
+                </div>
+                <div class="modal-body">
+                    <p>Unknown error</p>
+                </div>
+                <div class="modal-footer">
+                    <button id="btnClose" class="btn btn-success" data-dismiss="modal">Close</button>
+
+                </div>
+
+            </div>
+
+        </div>
+
+    </div>
     <!-- Save New Information Popup -->
 
     <div class="modal fade" id="popupSaveNewInfo" tabindex="-1" role="dialog" aria-labelledby="saveNewInfoPopup"
-        aria-hidden="true">
+         aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
